--- a/Amys-Sandbox/CSS3-Animations/css-animations.css
+++ b/Amys-Sandbox/CSS3-Animations/css-animations.css
@@ -5,6 +5,12 @@ body {
 	text-align:center;
 }
 
+#content{
+	margin-left: 1%;
+	margin-right: 1%;
+	width: 98%;
+}
+
 h1 {
 	font-family: georgia;
 	font-size: 18pt;
@@ -17,12 +23,13 @@ h2 {
 	font-weight: bold;
 }
 
-#slide, #rotate, #changing, #colors {
+#slide, #rotate, #changing, #colors, #roll {
 	border: 1px solid black;
-	width:30%;
+	width:450px;
 	height: 300px;
 	padding:15px;
 	float:left;
+	margin: 20px;
 }
 
 #slide img {
@@ -34,14 +41,14 @@ h2 {
 
 /* Chrome, Safari, Opera */
 @-webkit-keyframes slide {
-    from  {visibility: visible; left:-180px; top:0px;}
-    to {left:180px; top:0px; visibility: hidden;}
+    from  {visibility: visible; left:-150px; top:0px;}
+    to {left:150px; top:0px; visibility: hidden;}
 }
 
 /* Standard syntax */
 @keyframes slide {
-    from  {visibility: visible; left:-180px; top:0px;}
-    to {left:180px; top:0px; visibility: hidden;}
+    from  {visibility: visible; left:-150px; top:0px;}
+    to {left:150px; top:0px; visibility: hidden;}
 }
 
 
@@ -67,11 +74,12 @@ h2 {
 
 #bounce {
 	border: 1px solid black;
-	width:30%;
+	width:450px;
 	height: 300px;
 	padding:15px;
 	float:left;
 	clear:right;
+	margin: 20px;
 }
 
 #bounce img {
@@ -191,4 +199,25 @@ h2 {
     50%  {background: green; left:200px; top:200px;}
     75%  {background: purple; left:0px; top:200px;}
     100% {background: red; left:0px; top:0px;}
+}
+
+
+#roll img {
+	visibility: hidden;
+	position:relative;
+	width: 100px;
+	-webkit-animation: roll 3s infinite linear alternate; /* Chrome, Safari, Opera */
+    animation: roll 3s infinite linear alternate;
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes roll {
+    from  {visibility: visible; left:-150px; top:0px; -webkit-transform: rotate(0deg); }
+    to {left:150px; top:0px; visibility: hidden; -webkit-transform: rotate(360deg); }
+}
+
+/* Standard syntax */
+@keyframes roll {
+    from  {visibility: visible; left:-150px; top:0px; -webkit-transform: rotate(0deg); }
+    to {left:150px; top:0px; visibility: hidden; -webkit-transform: rotate(360deg); }
 }
